--- a/biblio.bib
+++ b/biblio.bib
@@ -1,5 +1,6 @@
 @STRING{cmame	= "Computer Methods in Applied Mechanics and Engineering"}
 @STRING{cras	= "Comptes Rendus de l'Acad\'emie des Sciences" }
+@STRING{ijnme	= "International Journal for Numerical Methods in Engineering" }
 @article{bertailsdescoubes:inria-00557706,
   AUTHOR =	 {Bertails-Descoubes, F. and Cadoux, F. and Daviet,
                   G. and Acary, V.},
@@ -262,4 +263,79 @@
   pages={201--213},
   year={2002},
   publisher={Springer}
+}
+@Article{Christensen.Klarbring.ea1998,
+  author =	 "P. Christensen and A. Klarbring and J. Pang and
+                  N. Stromberg",
+  title =	 "Formulation and comparison of algorithms for
+                  frictional contact problems",
+  year =	 1998,
+  journal =	 ijnme,
+  volume =	 42,
+  pages =	 {145--172}
+}
+
+@article{Amestoy.ea_SIAMMAA2001,
+    AUTHOR = {Amestoy, Patrick R. and Duff, Iain S. and L'Excellent,
+              Jean-Yves and Koster, Jacko},
+     TITLE = {A fully asynchronous multifrontal solver using distributed
+              dynamic scheduling},
+   JOURNAL = {SIAM J. Matrix Anal. Appl.},
+  FJOURNAL = {SIAM Journal on Matrix Analysis and Applications},
+    VOLUME = {23},
+      YEAR = {2001},
+    NUMBER = {1},
+     PAGES = {15--41 (electronic)},
+      ISSN = {0895-4798},
+   MRCLASS = {65F05 (65F50 65Y05 68W15)},
+  MRNUMBER = {1856597},
+       DOI = {10.1137/S0895479899358194},
+       URL = {http://dx.doi.org/10.1137/S0895479899358194},
+}
+	@article {Amestoy.ea_PC2006,
+    AUTHOR = {Amestoy, Patrick R. and Guermouche, Abdou and L'Excellent,
+              Jean-Yves and Pralet, St{\'e}phane},
+     TITLE = {Hybrid scheduling for the parallel solution of linear systems},
+   JOURNAL = {Parallel Comput.},
+  FJOURNAL = {Parallel Computing. Theory and Applications},
+    VOLUME = {32},
+      YEAR = {2006},
+    NUMBER = {2},
+     PAGES = {136--156},
+      ISSN = {0167-8191},
+     CODEN = {PACOEJ},
+   MRCLASS = {65Y05 (65F05 65F50 68W10)},
+  MRNUMBER = {2202663},
+       DOI = {10.1016/j.parco.2005.07.004},
+       URL = {http://dx.doi.org/10.1016/j.parco.2005.07.004},
+}
+	
+@Misc{siconos,
+  author =	 {Acary, V. and Br\'emond, M. and Huber, O. and P\'erignon, F.},
+  title =	 {Siconos. A software for modeling and simulation of nonsmooth
+                  dynamical systems},
+  howpublished = {\url{http://siconos.gforge.inria.fr}, \url{https://github.com/siconos/siconos}}
+}	
+@techreport{acary:hal-00945820,
+  TITLE = {{FCLIB: a collection of discrete 3D Frictional Contact problems}},
+  AUTHOR = {Acary, V. and Br{\'e}mond, M. and Koziara, T. and P{\'e}rignon, F.},
+  URL = {https://hal.inria.fr/hal-00945820},
+  TYPE = {Technical Report},
+  INSTITUTION= {INRIA},
+  NUMBER = {RT-0444},
+  PAGES = {34},
+  YEAR = {2014},
+  MONTH = Feb,
+  HAL_ID = {hal-00945820},
+  HAL_VERSION = {v2},
+  howpublished = {\url{https://github.com/FrictionalContactLibrary/fclib}}
+}
+
+@inproceedings{dubois2003lmgc90,
+  title={LMGC90 une plateforme de d{\'e}veloppement d{\'e}di{\'e}e {\`a} la mod{\'e}lisation des probl{\`e}mes d’interaction},
+  author={Dubois, F and Jean, M},
+  booktitle={Actes du sixieme colloque national en calcul des structures},
+  volume={1},
+  pages={111--118},
+  year={2003}
 }
