--- a/acary_bremond_dubois_csma2017.tex
+++ b/acary_bremond_dubois_csma2017.tex
@@ -7,7 +7,7 @@
 % ----------------------------------------------------------------------
 \title{Méthodes de Newton non--lisses pour les problèmes de contact frottant dans les systèmes de multi--corps flexibles.}
 % ----------------------------------------------------------------------
-\author{V. Acary$^1$, M. Brémond$^2$, F. Dubois$^1$}
+\author{V. Acary$^1$, M. Brémond$^1$, F. Dubois$^2$}
 % ----------------------------------------------------------------------
 \address{%
 $^1$ INRIA. Grenoble, \{vincent.acary,maurice.bremond\}@inria.fr\\
@@ -50,29 +50,28 @@ $^2$ LMGC, Université de Montpellier, frederic.dubois@umontpellier.fr \\
 % ----------------------------------------------------------------------
 
 \begin{abstract}
-Dans cette contribution, on se propose d'évaluer la performance des méthodes de Newton non--lisses dans le contexte des systèmes multi--corps flexibles (mécanismes, milieux granulaires ou milieux divisés) avec contact et frottement. Les méthodes itératives de type projection (Jacobi ou Gauss--Seidel projeté) sont généralement utilisées pour leur propriétés de robustesse et de régularisation des systèmes fortement hyper--statiques. On montre que dans le cas des systèmes déformables, les méthodes de Newton permettent d'atteindre de grandes précisions a un coût beaucoup plus faible.
+Dans cette contribution, on se propose d'évaluer la performance des méthodes de Newton non--lisses dans le contexte des systèmes multi--corps flexibles (mécanismes, milieux granulaires ou milieux divisés) avec contact et frottement. Les méthodes itératives de type projection (Jacobi ou Gauss--Seidel projeté) sont généralement utilisées pour leurs propriétés de robustesse et de régularisation des systèmes fortement hyper--statiques. On montre que dans le cas des systèmes déformables, les méthodes de Newton permettent d'atteindre de grandes précisions à un coût beaucoup plus faible.
 
 \keywords contact unilatéral, frottement de Coulomb, méthodes Newton non--lisses.
 \end{abstract}
 
 \section{Introduction}
 
-Dans le contexte des systèmes multi--corps avec contact et frottement de Coulomb, le problème de contact frottant discret que l'on obtient a chaque pas de temps après une discrétisation temporelle, ou a chaque pas de chargement en quasi--statique, est généralement résolu par des méthodes itératives de type projection (Jacobi ou Gauss--Seidel projeté). 
+Dans le contexte des systèmes multi--corps avec contact et frottement de Coulomb, le problème de contact frottant discret que l'on obtient à chaque pas de temps après une discrétisation temporelle, ou à chaque pas de chargement en quasi--statique, est généralement résolu par des méthodes itératives de type projection (Jacobi ou Gauss--Seidel projeté). 
 %
 Pour les systèmes de corps rigides, qui sont pour la plupart fortement hyperstatiques du fait d'un grand nombre de contacts en regard du nombre de degrés de liberté, les méthodes itératives jouissent de bonnes propriétés de robustesse. Elles permettent de converger de façon sure, mais lentement, vers une solution du problème même si les forces de réaction ne sont pas définies de manière unique. Il est connu que les méthodes de Newton non--lisses sont totalement inopérantes pour les systèmes rigides hyperstatiques~\cite{bertailsdescoubes:inria-00557706}. \marginpar{\red{Une autre citation?}}
 
 
-Dans le cas de système de corps flexibles, discrétisés par exemple par des éléments finis, il est facile de réduire ce degré d'hyperstaticité en augmentant le nombre de degrés de liberté du système. Un des objectifs est de réduire la dépendance des contraintes sur le système. Ceci peut par exemple se faire en raffinant les maillages dans les zones de  contact tout en contrôlant le nombre de point de contact générés.
+Dans le cas de systèmes de corps flexibles, discrétisés par exemple par des éléments finis, il est facile de réduire ce degré d'hyperstaticité en augmentant le nombre de degrés de liberté du système. Un des objectifs est de réduire la dépendance des contraintes sur le système. Ceci peut par exemple se faire en raffinant les maillages dans les zones de  contact tout en contrôlant le nombre de points de contacts générés.
 %
-Dans cette contribution, on montre qu'il devient alors intéressant d'utiliser des méthodes de Newton non lisses pour résoudre le problème discret surtout si on veut atteindre des niveaux de précision relative supérieurs à $10^{-3}$.  Alors que les méthodes itératives de type projection continuent à converger lentement, les méthodes de Newton retrouvent leurs convergences quadratiques locales pour des systèmes fortement réguliers. Cela permet d'atteindre des niveaux de précisions arbitraires pour un coût de calcul bien moindres.
+Dans cette contribution, on montre qu'il devient alors intéressant d'utiliser des méthodes de Newton non--lisses pour résoudre le problème discret, surtout si on veut atteindre des niveaux de précision relative supérieurs à $10^{-3}$.  Alors que les méthodes itératives de type projection continuent à converger lentement, les méthodes de Newton retrouvent leurs convergences quadratiques locales pour des systèmes fortement réguliers. Cela permet d'atteindre des niveaux de précisions arbitraires pour un coût de calcul bien moindre.
 
 
-Dans ce travail\marginpar{\red{voir si on peut le faire. supprimer le paragraphe sinon}}, on essaye aussi de montrer qu'il peut être intéressant d'introduire un modèle de comportement élastique dans un système initialement rigide afin de profiter de l'efficacité  numérique des méthodes de Newton. Dans des travaux antérieurs, M. Jean~\cite{Jean1999,Acary.Jean98} avait montré que l'introduction de l'élasticité permettait de réduire le degré d'hyperstaticité et d'améliorer sensiblement la qualité des solutions en termes de forces de réaction. En préférant des méthodes de Newton non--lisses, on améliore aussi fortement le coût de calcul.
+Dans ce travail\marginpar{\red{voir si on peut le faire. supprimer le paragraphe sinon}}, on essaye aussi de montrer qu'il peut être intéressant d'introduire un modèle de comportement élastique dans un système initialement rigide afin de profiter de l'efficacité numérique des méthodes de Newton. Dans des travaux antérieurs, M. Jean~\cite{Jean1999,Acary.Jean98} avait montré que l'introduction de l'élasticité permettait de réduire le degré d'hyperstaticité et d'améliorer sensiblement la qualité des solutions en termes de forces de réactions. En préférant des méthodes de Newton non--lisses, on améliore ainsi fortement le coût de calcul.
 
 
-\paragraph{Formulation du problème}
-
-Considérons un nombre  $n_c\in \NN$ de points de contact tridimensionnel et un nombre   $n\in\NN$ de degrés de liberté du système discret. Pour chaque contact $\alpha$, les vitesses relatives locales au contact notées  $u^\alpha\in\RR^3$ et les réactions au contact notées $r^\alpha\in\RR^3$ (forces ou impulsions) sont décomposées dans un repère local au contact $({\sf N}^\alpha,{\sf T_1}^\alpha,{\sf T_2}^\alpha)$ telles que  $u^\alpha = u^\alpha_{\n} {\sf N}^\alpha +   u^{\alpha}_{\tone}{\sf T_1}^\alpha + u^{\alpha}_{\ttwo}{\sf T_2}^\alpha , u^\alpha_{\n} \in \RR, u^\alpha_{\t} = [u^{\alpha}_{\tone},u^{\alpha}_{\ttwo}]^\top \in \RR^2$ and  $r^\alpha = r^\alpha_{\n} {\sf N}^\alpha +   r^{\alpha}_{\tone}{\sf T_1}^\alpha + r^{\alpha}_{\ttwo}{\sf T_2}^\alpha  , r^\alpha_{\n} \in \RR, r^\alpha_{\t}=[r^{\alpha}_{\tone},r^{\alpha}_{\ttwo}]^\top \in \RR^2$. L'interstice au contact est noté $g_\n^\alpha$ (voir la figure~\ref{fig:local-frame}).
+\paragraph{Formulation du problème.}
+Considérons un nombre  $n_c\in \NN$ de points de contact tridimensionnel et un nombre   $n\in\NN$ de degrés de liberté du système discret. Pour chaque contact $\alpha$, les vitesses relatives locales au contact notées  $u^\alpha\in\RR^3$ et les réactions au contact notées $r^\alpha\in\RR^3$ (forces ou impulsions) sont décomposées dans un repère local au contact $({\sf N}^\alpha,{\sf T_1}^\alpha,{\sf T_2}^\alpha)$ tel que  $u^\alpha = u^\alpha_{\n} {\sf N}^\alpha +   u^{\alpha}_{\tone}{\sf T_1}^\alpha + u^{\alpha}_{\ttwo}{\sf T_2}^\alpha , u^\alpha_{\n} \in \RR, u^\alpha_{\t} = [u^{\alpha}_{\tone},u^{\alpha}_{\ttwo}]^\top \in \RR^2$ et  $r^\alpha = r^\alpha_{\n} {\sf N}^\alpha +   r^{\alpha}_{\tone}{\sf T_1}^\alpha + r^{\alpha}_{\ttwo}{\sf T_2}^\alpha  , r^\alpha_{\n} \in \RR, r^\alpha_{\t}=[r^{\alpha}_{\tone},r^{\alpha}_{\ttwo}]^\top \in \RR^2$. L'interstice au contact est noté $g_\n^\alpha$ (voir la figure~\ref{fig:local-frame}).
 
 \begin{figure}
   \centering
@@ -139,17 +138,17 @@ où $\mu^\alpha$ est le coefficient de frottement du contact $\alpha$. Sous form
 \begin{equation}
   \label{eq:contact-disjunctive}
   \left\{\begin{array}{llr}
-      r^\alpha = 0  &\text{ if } g^\alpha_{\n} > 0  & \text{(pas de  contact)}\\
-      r^\alpha = 0,  u^\alpha_\n \geq 0   &\text{ if } g^\alpha_{\n} \leq 0 & \text{(décollage)} \\
-      r^\alpha \in K^\alpha, u^\alpha =0 &\text{ if } g^\alpha_{\n} \leq 0 & \text{(adhérence)}  \\
-      r^\alpha \in \partial K^\alpha,u^\alpha _\n=0,  \exists\,\beta > 0, u^\alpha_\t = -\beta r^\alpha_\t &\text{ if } g^\alpha_{\n} \leq 0 & \text{(glissement)}  \\
+      r^\alpha = 0  &\text{ si } g^\alpha_{\n} > 0  & \text{(pas de  contact)}\\
+      r^\alpha = 0,  u^\alpha_\n \geq 0   &\text{ si } g^\alpha_{\n} \leq 0 & \text{(décollage)} \\
+      r^\alpha \in K^\alpha, u^\alpha =0 &\text{ si } g^\alpha_{\n} \leq 0 & \text{(adhérence)}  \\
+      r^\alpha \in \partial K^\alpha,u^\alpha _\n=0,  \exists\,\beta > 0, u^\alpha_\t = -\beta r^\alpha_\t &\text{ si } g^\alpha_{\n} \leq 0 & \text{(glissement)}  \\
     \end{array}\right.
 \end{equation}
 En introduisant la vitesse relative locale modifiée $\hat u^\alpha = u^\alpha + \mu^\alpha \|u^\alpha_\t\| {\sf N}^\alpha$ due à~\cite{DeSaxce92}, le problème peut être reformulé de manière équivalente comme un problème de complémentarité du second ordre~\cite{DeSaxce92,Acary.ea_ZAMM2011} :
 \begin{equation}
   \label{eq:contact-soccp}
   \left\{\begin{array}{ll}
-      r^\alpha = 0  & \text{ if } g^\alpha_{\n} > 0  \\
+      r^\alpha = 0  & \text{ si } g^\alpha_{\n} > 0  \\
       K^{\alpha,\star}\ni \hat u^\alpha \perp r^\alpha \in K^\alpha  & \text{ sinon. }\\
     \end{array}\right.
 \end{equation}
@@ -176,7 +175,8 @@ g(u) = [[\mu^\alpha  \|u^\alpha_\t\| {\sf N}^\alpha]^\top, \alpha = 1\ldots n_c]
 La matrice $M \in \RR^{n \times n}$ est le plus souvent définie positive. Nous nous placerons dans cet article dans les conditions d'existence de solution comme elles sont données dans~\cite{Klarbring.Pang1998,Acary.ea_ZAMM2011}.
 
 
-\paragraph{Rang de la matrice $H$ et hyperstaticité} Attardons nous un moment sur la matrice $H \in \RR^{n\times 3n_c} $ qui relie les efforts de contact $r$ aux efforts généralisés $R=H r$ et de façon duale les vitesse relatives au contact aux vitesses généralisées $u = H^\top v +w$ . Si le nombre de contact est grand en rapport au nombre de degrés de liberté, disons $3 n_c > n$, la matrice $H$ ne peut pas être de rang plein par colonnes. Il en résulte une dépendance linéaire des efforts de contacts et la multiplicité des solutions. Dans le cas des systèmes de corps rigides, cette situation est liée a l'hyperstaticité du système. Elle est, de plus, la situation générique. Pensons par exemple à une table rigide à quatre pieds sur le sol. Naturellement, cette situation peut aussi arriver dans le cas $3 n_c \leq  n$ si des contraintes linéairement dépendants sont appliquées aux corps. La réduction de rang de cette matrice influence fortement le comportement des méthodes numériques de résolution. 
+\paragraph{Rang de la matrice $H$ et hyperstaticité.} 
+Attardons nous un moment sur la matrice $H \in \RR^{n\times 3n_c} $ qui relie les efforts de contact $r$ aux efforts généralisés $R=H r$ et de façon duale les vitesses relatives au contact aux vitesses généralisées $u = H^\top v +w$ . Si le nombre de contacts est grand en rapport au nombre de degrés de liberté, disons $3 n_c > n$, la matrice $H$ ne peut pas être de rang plein par colonnes. Il en résulte une dépendance linéaire des efforts de contacts et une multiplicité de solutions. Dans le cas des systèmes de corps rigides, cette situation est liée a l'hyperstaticité du système. Elle est, de plus, la situation générique. Pensons par exemple à une table rigide à quatre pieds sur le sol. Naturellement, cette situation peut aussi arriver dans le cas $3 n_c \leq  n$ si des contraintes linéairement dépendantes sont appliquées aux corps. La réduction de rang de cette matrice influence fortement le comportement des méthodes numériques de résolution. 
 
 Il en est de même si on cherche a résoudre le problème réduit aux variables locales au contact:
 \begin{equation}\label{eq:soccp2-intro}
@@ -186,7 +186,7 @@ Il en est de même si on cherche a résoudre le problème réduit aux variables 
         K^\star \ni {\hat u} \perp r \in K,
   \end{array}
 \end{equation}
-avec $W \coloneqq H^\top M^{-1} H \in \RR^{3n_c\times 3n_c}$ la matrice de Delassus et $q \coloneqq w + H\top M^{-1} f \in \RR^{3n_c}$. De ce cas, c'est la matrice $W$ qui n'est plus de rang plein et les mêmes problèmes sont constatés.
+avec $W \coloneqq H^\top M^{-1} H \in \RR^{3n_c\times 3n_c}$ la matrice de Delassus et $q \coloneqq w + H^\top M^{-1} f \in \RR^{3n_c}$. Dans ce cas, c'est la matrice $W$ qui n'est plus de rang plein et les mêmes problèmes sont constatés.
 
 % \begin{itemize}
 % \item Description du problème de frottement discret
@@ -201,7 +201,8 @@ avec $W \coloneqq H^\top M^{-1} H \in \RR^{3n_c\times 3n_c}$ la matrice de Delas
 \section{Méthodes numériques de résolution}
 Rappelons brièvement les caractéristiques des méthodes utilisées dans cette étude. Pour plus de détails, on pourra consulter~\cite{Acary.Brogliato2008}.
 
-\paragraph{Méthodes de Newton non--lisses} Les méthodes  de Newton non--lisses sont basées sur une réécriture du problème sous la forme d'une équation $F(r)=0$, dont les racines sont les solutions du problème original. Parmi les exemples les plus connus de ces fonctions, on peut citer la fonction de P. Alart et A. Curnier~\cite{Alart.Curnier1991}:
+\paragraph{Méthodes de Newton non--lisses.} 
+Les méthodes  de Newton non--lisses sont basées sur une réécriture du problème sous la forme d'une équation $F(r)=0$, dont les racines sont les solutions du problème original. Parmi les exemples les plus connus de ces fonctions, on peut citer la fonction de P. Alart et A. Curnier~\cite{Alart.Curnier1991}:
 \begin{equation}
   \label{eq:AC-1}
  F_\ac(r) \coloneqq  
@@ -220,7 +221,7 @@ avec le disque de frottement  $D(\mu,(r_{n})_+) = \prod_{\alpha=1\ldots n_c} \{ 
     r_\t - P_{D(\mu, (r_{\n})_+)}(r_\t - \rho_\t (Wr+q)_\t   ) 
   \end{array}\right] =0,\quad \rho_\n>0, \rho_\t>0.
 \end{equation}
- D'autres fonctions de complémentarité peuvent aussi utilisées comme la fonction naturelle:
+ D'autres fonctions de complémentarité peuvent aussi être utilisées comme la fonction naturelle:
 \begin{equation}
   \label{eq:natural-II}
   F_\nat(r) \coloneqq   \left[
@@ -236,7 +237,8 @@ ou encore la fonction de Fisher-Burmeister. Partant de ces formulations, il conv
 \end{equation}
 Dans cet article, nous utilisons MUMPS~\cite{Amestoy.ea_PC2006,Amestoy.ea_SIAMMAA2001} pour la résolution des systèmes linéaires.
 
-\paragraph{Méthodes de projection de type Gauss-Seidel} La méthode de Gauss--Seidel avec projection est décrite en détail dans~\cite{Mitsopoulou.Doudoumis1987,Jourdan.Alart.ea98}. Elle consiste en une décomposition du problème contact par contact qui permet de calculer à l'itération $k$ les inconnues du contact $\alpha$ en résolvant le problème suivant 
+\paragraph{Méthodes de projection de type Gauss-Seidel.} 
+La méthode de Gauss--Seidel avec projection est décrite en détail dans~\cite{Mitsopoulou.Doudoumis1987,Jourdan.Alart.ea98}. Elle consiste en une décomposition du problème contact par contact qui permet de calculer à l'itération $k$ les inconnues du contact $\alpha$ en résolvant le problème suivant 
 \begin{equation}
   \label{eq:pgs-1}
   \begin{array}{c}
@@ -247,7 +249,8 @@ Dans cet article, nous utilisons MUMPS~\cite{Amestoy.ea_PC2006,Amestoy.ea_SIAMMA
 \end{equation}
 La résolution du problème local au contact~(\ref{eq:pgs-1}) peut se faire de manière analytique, ou en utilisant une autre méthode numérique. Dans cet article, on utilisera localement une méthode de Newton non--lisse comme décrite ci--dessus ou des itérations de points fixe de $F_\nat(r)-r$.
 
-\paragraph{Nomenclature} Dans la suite, les méthodes utilisées sont nommées comme dans la Table~\ref{tab:nomenclature}.
+\paragraph{Nomenclature.} 
+Dans la suite, les méthodes utilisées sont nommées comme dans la Table~\ref{tab:nomenclature}.
 \begin{table}
   \centering
   \begin{tabular}{ll}
@@ -264,23 +267,23 @@ La résolution du problème local au contact~(\ref{eq:pgs-1}) peut se faire de m
   \label{tab:nomenclature}
 \end{table}
 
-
-\paragraph{Mesure d'erreur} Afin de comparer la convergence des méthodes, nous utilisons un critère d'arrêt à une précision utilisateur $\epsilon$ basée sur la fonction naturelle pour les problèmes de complémentarité du second ordre:
+\paragraph{Mesure d'erreur.} 
+Afin de comparer la convergence des méthodes, nous utilisons un critère d'arrêt à une précision utilisateur $\epsilon$ basée sur la fonction naturelle pour les problèmes de complémentarité du second ordre:
 \begin{equation}
   \label{eq:stopping-criteria-full}
   \displaystyle\frac{\|F_\nat(r)\|}{\|q\|} < \epsilon,
 \end{equation}
-en supposant que le problème n'est pas dégénéré($\|q\| \neq 0$).
+en supposant que le problème n'est pas dégénéré($\|q\| \neq 0$). \\
 %
-Cette mesure d'erreur est justifiée plus amplement dans \cite{Facchinei.Pang2003}. Dans le cas des méthodes itératives de projection, le coût de calcul de $F_\nat(r)$ est élevé par rapport une itération. Nous utilisons un critère d'arrêt du type 
+Cette mesure d'erreur est justifiée plus amplement dans \cite{Facchinei.Pang2003}. Dans le cas des méthodes itératives de projection, le coût de calcul de $F_\nat(r)$ est élevé par rapport à une itération. Nous utilisons un critère d'arrêt du type 
 \begin{equation}
   \label{eq:stopping-criteria-light}
   \displaystyle\frac{\|r_{k+1}- r_{k}\|}{\|r_{k+1}\|} < \tau,
 \end{equation}
 où $\tau$ est adapté en ligne pour atteindre le critère~(\ref{eq:stopping-criteria-full}).
 
-
-\paragraph{Profil de performance} Pour évaluer l'efficacité d'une méthode par rapport à une autre, nous utilisons les profils de performance comme ils sont proposés dans~\cite{DolanMore_MP2002}. Considérons une ensemble $\mathcal P$ de $n_p$ problèmes et $\mathcal S$  de $n_s$ méthodes de résolutions. Pour chaque problème $p\in \mathcal P$ et chaque méthode $s \in \mathcal S$, on définit un critère de performance $t_{p,s}$. Dans notre cas, il s'agira du nombre d'opérations flottantes pour atteindre une précision donnée. De plus, si la précision n'est pas atteinte au bout d'un temps de calcul maximum par problème ($1000\si{\second}$), le critère est égal à $+\infty$. On définit le rapport de performance par:  
+\paragraph{Profil de performance.} 
+Pour évaluer l'efficacité d'une méthode par rapport à une autre, nous utilisons les profils de performance comme ils sont proposés dans~\cite{DolanMore_MP2002}. Considérons un ensemble $\mathcal P$ de $n_p$ problèmes et $\mathcal S$  de $n_s$ méthodes de résolutions. Pour chaque problème $p\in \mathcal P$ et chaque méthode $s \in \mathcal S$, on définit un critère de performance $t_{p,s}$. Dans notre cas, il s'agira du nombre d'opérations flottantes pour atteindre une précision donnée. De plus, si la précision n'est pas atteinte au bout d'un temps de calcul maximum par problème ($1000\si{\second}$), le critère est égal à $+\infty$. On définit le rapport de performance par:  
 \begin{equation}
  r_{p, s} = \frac{t_{p,s}}{\text{min}\, \{t_{p,s}, \, \, s \in S\}} \, .
 \end{equation}
@@ -294,9 +297,8 @@ On peut remarquer que $\rho_s(1)$ représente la probabilité que la méthode $s
 
 \section{Comparaison sur des solides élastiques}
 
-\paragraph{La murette}
-
-L'exemple choisi pour illustrer le comportement de solveurs est une modélisation d'une  maçonnerie en appareil régulier composée  de 12 blocs et soumis à un chargement de cisaillement illustrée à la figure~\ref{fig:LowWall_FEM}. Les blocs sont maillés par des éléments finis linéaires avec un comportement élastique linéaire ($\rho= \num{2000}\si{\kilogram\per\cubic\metre}, E=\num{2.2e+9}\si{\pascal} ,\nu = 0.2$). L'interface entre les blocs est modélisée par du frottement de Coulomb avec du contact unilatéral.  Le coefficient de frottement entre les blocs est de $0.83$ et entre les blocs et les supports de $0.53$. Le support du bas est fixe. Sur le support du haut on applique un effort  maximum de compression de $30000 \si{\newton}$ et une vitesse tangente de cisaillement de $\num{1e-3}\si{\meter\per\second}$.
+\paragraph{La murette.}
+L'exemple choisi pour illustrer le comportement des solveurs est la modélisation d'une maçonnerie en appareil régulier composée de 12 blocs et soumise à un chargement de cisaillement illustrée à la figure~\ref{fig:LowWall_FEM}. Les blocs sont maillés par des éléments finis linéaires avec un comportement élastique linéaire ($\rho= \num{2000}\si{\kilogram\per\cubic\metre}, E=\num{2.2e+9}\si{\pascal} ,\nu = 0.2$). L'interface entre les blocs est modélisée par du frottement de Coulomb avec du contact unilatéral.  Le coefficient de frottement entre les blocs est de $0.83$ et entre les blocs et les supports de $0.53$. Le support du bas est fixe. Sur le support du haut on applique un effort  maximum de compression de $30000 \si{\newton}$ et une vitesse tangente de cisaillement de $\num{1e-3}\si{\meter\per\second}$.
 \marginpar{\red{verifier la description. nombre et type d'éléments}} Le nombre de points de contact est $2064$ et le nombre de degré de liberté est $7212$. La matrice $H$ est de rang plein.
 \begin{figure}[htbp]
   \centering
@@ -305,13 +307,12 @@ L'exemple choisi pour illustrer le comportement de solveurs est une modélisatio
   \label{fig:LowWall_FEM}
 \end{figure}
 
-\paragraph{Génération d'exemples par simulation et logiciels}
-
+\paragraph{Génération d'exemples par simulation et logiciels.}
 Le système est modélisé et simulé par le logiciel LMGC90. A chaque pas de temps, on résout le problème discret de frottement avec Siconos/numerics et on exporte le problème discret à résoudre dans un fichier au format FClib. De cette collection d'exemples, on extrait  50 problèmes de difficulté graduée pour la méthode de Newton non--lisse.
 
- LMGC90~\cite{dubois2003lmgc90} est une plateforme de d{\'e}veloppement d{\'e}di{\'e}e {\`a} la mod{\'e}lisation des probl{\`e}mes d’interaction. L'implantation des méthodes de résolution est faite dans Siconos~\cite{siconos} qui est un logiciel open--source de modélisation et de simulation des systèmes dynamiques non lisse.  Enfin FCLib~\cite{acary:hal-00945820} est un format et une collection ouverte de problèmes de frottement qui permet de comparer des méthodes des résolution sur une large base d'exemples.
+ LMGC90~\cite{dubois2003lmgc90} est une plateforme de d{\'e}veloppement d{\'e}di{\'e}e {\`a} la mod{\'e}lisation des probl{\`e}mes d’interaction. L'implantation des méthodes de résolution est faite dans Siconos~\cite{siconos} qui est un logiciel open--source de modélisation et de simulation des systèmes dynamiques non lisse.  Enfin FCLib~\cite{acary:hal-00945820} est un format et une collection ouverte de problèmes de frottement qui permet de comparer des méthodes de résolution sur une large base d'exemples.
 
-\paragraph{Résultats}
+\paragraph{Résultats.}
 Sur la figure~\ref{fig:LowWall_FEM.simple}, on représente les profils de performance des méthodes de résolution pour des précisions différentes. 
 
 Pour une précision relativement faible de $10^{-2}$, les performances des méthodes sont très proches. Les méthodes de Newton non lisses  {\sf\small NSN-AC-NLS}, {\sf\small NSN-JM-NLS} et {\sf\small NSN-AC-NLS-HYBRID} sont légèrement meilleures que {\sf\small NSGS-AC} et {\sf\small NSGS-FP-VI-UPK}. La méthode {\sf\small NSN-AC-NLS-HYBRID} qui utilise un pré--conditionnement apparaît comme étant la plus performante ce qui est logique puisque les méthodes de projection permettent de trouver une solution grossière plus rapidement. La méthode {\sf\small NSN-NM-NLS} est la moins performante.
@@ -392,12 +393,12 @@ En conclusion, on peut observer que
 
 \item Les méthodes itératives de projection restent intéressantes pour des précisions faibles, mais elles ne permettent pas d'atteindre une précision élevée pour un coût raisonnable.
 \end{itemize}
-
+\ \\
 Les perspectives à ce travail sont les suivantes:
 \begin{itemize}
-\item Dans les simulations de systèmes multi--corps rigides, ils conviendrait d'évaluer l'intérêt de passer à un modèle déformable pour accélérer les calculs. \marginpar{\red{c'était dans l'intro mais on a pas eu le temps ==> reprendre l'intro} }
-\item Les méthodes de Newton non--lisse permettent d'intégrer facilement les comportements non--linéaires de corps ce qui évite une boucle externe de Newton.
-\item Les librairies de calculs des grands systèmes linéaires comme MUMPS qui sont à la base de méthodes de Newton, sont le plus souvent massivement parallèles. Cela pourrait fournir une alternative en termes de calcul distribué aux méthodes de Gauss--Seidel distribuées.
+\item évaluer l'intérêt de passer à un modèle déformable pour accélérer les calculs de systèmes multi--corps rigides. \marginpar{\red{c'était dans l'intro mais on a pas eu le temps ==> reprendre l'intro} }
+\item intégrer le comportement non--linéaire de corps dans les méthodes de Newton non--lisse. Ceci permettrait d'éviter une boucle externe de Newton.
+\item utiliser les potentialités massivement parallèles des librairies de calculs de grands systèmes linéaires comme MUMPS qui sont utilisées dans les méthodes de Newton. Cela pourrait fournir une alternative aux méthodes de Gauss--Seidel distribuées.
 \end{itemize}
 
 
