relecture de fd suite

--- a/acary_bremond_dubois_csma2017.tex
+++ b/acary_bremond_dubois_csma2017.tex
@@ -289,7 +289,7 @@ Pour évaluer l'efficacité d'une méthode par rapport à une autre, nous utilis
 \end{equation}
 Enfin on définit la probabilité  $\rho_s(\tau)$ pour une méthode $s \in S$ que le rapport de perfomance $r_{p, s}$ soit en dessous d'une valeur $\tau \in \mathbb R$ :
 \begin{equation}
- \rho_s(\tau) = \frac{1}{n_p} \text{size} \{p \in P, \, \, r_{p, s} \leq \tau\} \geq 1.
+ \rho_s(\tau) = \frac{1}{n_p} \text{size} \{p \in P, \, \, r_{p, s} \leq \tau\}. % \geq 1.
 \end{equation}
 On peut remarquer que $\rho_s(1)$ représente la probabilité que la méthode $s$ soit la meilleure par rapport aux autres méthodes. La valeur $\rho_s(\tau)$ pour $\tau$ grand caractérise la capacité de la méthode à résoudre un grand nombre de problème en temps long. Les fonctions $\tau \rightarrow \rho_s(\tau) $ sont des fonctions croissantes dont  on tracera les graphes appelés profils de performance pour une plage de $\tau$. 
 
