add emacs master file info

--- a/acary_bremond_dubois_csma2017.tex
+++ b/acary_bremond_dubois_csma2017.tex
@@ -428,3 +428,8 @@ Les perspectives à ce travail sont les suivantes:
 % ----------------------------------------------------------------------
 \end{document}
 % ----------------------------------------------------------------------
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: t
+%%% End:
