add first draft of slides

--- a/slides/numerics.tex
+++ b/slides/numerics.tex
@@ -46,7 +46,7 @@
 
 \subsection{Matrix block--splitting and projection based algorithms}
 \frame{
-  \frametitle{Matrix block-splitting and projection based algorithms \cite{Moreau1994,Jean.Touzot1988}}
+  \frametitle{Matrix block-splitting and projection based algorithms \cite{Mitsopoulou.Doudoumis1987,Jourdan.Alart.ea98}}
   \begin{block}{Block splitting algorithm with $W^{\alpha\alpha}\in \RR^3$ (Gauss-Seidel)}
     \begin{equation}\label{EQ:NSGS-local1}
       \left\{ 
