--- a/slides/s.tex
+++ b/slides/s.tex
@@ -98,7 +98,7 @@
 \include{fc3d}
 %\frame{\tableofcontents}
 
-\include{existence}
+%\include{existence}
 %\frame{\tableofcontents}
 
 \include{numerics}
@@ -166,11 +166,10 @@
 \centerline{\textcolor{red}{ Thank you for your attention.}}
 }
 
- 
 \def\newblock{}
 {\scriptsize
-\bibliographystyle{plainnat}
-\bibliography{../Report/biblio,./Biblio/NonSmooth,./Biblio/Contact}
+\bibliographystyle{plain}
+\bibliography{biblio}
 }
 
 %\include{PWL}
