--- a/slides/comparison.tex
+++ b/slides/comparison.tex
@@ -3,7 +3,7 @@
 \label{Sec:Comparison}
 \subsection{Performance profiles}
 \frame{
-  \frametitle{Performance profiles~\cite{Dolan.More2002}}
+  \frametitle{Performance profiles~\cite{DolanMore_MP2002}}
 
   \begin{itemize}
   \item Given a set of problems $\mathcal P$
